@@ -7,6 +7,6 @@ Standards-Version: 3.7.2
 
 Package: gbiblio-server
 Architecture: any
-Depends: medusa-server, system-config-printer-gnome 
+Depends: medusa-server, system-config-printer-gnome, gbiblio-profile-catalog, gbiblio-profile-librarian, gbiblio-profile-user 
 Description: Guadalinex Bibliotecas V5 server meta package
  This package provides Guadalinex Bibliotecas V5 server's applications.
