@@ -49,7 +49,9 @@ install: build
 
 	# Add here commands to install the package into debian/gbiblio-server.
 	#$(MAKE) DESTDIR=$(CURDIR)/debian/gbiblio-server install
-
+	dh_install skel/home/cau/.ssh/id_rsa /home/cau/.ssh/
+	dh_install skel/etc/hostname /etc/
+	dh_install skel/etc/hosts /etc/	
 
 # Build architecture-independent files here.
 binary-indep: build install
